--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -1,13 +1,92 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /* prevents scrollbars */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Comfortaa, sans-serif;
   text-align: center;
+  background: #111;
+  /* optional background for Electron */
+  color: #fff;
+  /* optional text color */
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: inherit;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  padding: 20px;
+  border: thick double #2e7555;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.tooltip-bar {
+  flex: 0 0 auto;
+}
+
+.editor {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1rem;
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  background-color: #305e49;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+button:hover {
+  background-color: #316f63;
+}
+
+.button-panel {
+  width: 24%;
+  height: 50%;
+  gap: 16px;
+  display: flex;
+  justify-self: center;
+  flex-direction: column;
+}
+
+#frame-count {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background 0.2s;
 }
 
 .image-viewer {
-  margin-top: 50px;
-  background-color: ;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background-color: transparent;
 }
 
 .checkerboard-conic-background {
@@ -20,7 +99,10 @@
   background-size: calc(var(--square-size) * 2) calc(var(--square-size) * 2);
 }
 
-
-.card {
-  padding: 2em;
+.header-text {
+  color: #7a7a7aa9;
+  user-select: none;
+  cursor: default;
+  margin: 0;
+  padding: 0;
 }
