--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -5,16 +5,13 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  /* prevents scrollbars */
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: Comfortaa, sans-serif;
   text-align: center;
   background: #111;
-  /* optional background for Electron */
   color: #fff;
-  /* optional text color */
   box-sizing: border-box;
 }
 
@@ -26,23 +23,34 @@ body {
   width: 100vw;
   height: 100vh;
   padding: 20px;
-  border: thick double #2e7555;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  border: thick double #2e7555;
 }
 
 .tooltip-bar {
-  flex: 0 0 auto;
+  flex: 0 0 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .editor {
-  flex: 1 1 auto;
+  flex: 1 0 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   gap: 1rem;
+}
+
+.button-panel {
+  width: 30%;
+  height: 100%;
+  gap: 14px;
+  display: flex;
+  justify-self: center;
+  flex-direction: column;
 }
 
 button {
@@ -61,38 +69,44 @@ button:hover {
   background-color: #316f63;
 }
 
-.button-panel {
-  width: 24%;
-  height: 50%;
-  gap: 16px;
-  display: flex;
-  justify-self: center;
-  flex-direction: column;
-}
-
-#frame-count {
+#frame-count,
+#sheet-scale {
   width: 100%;
   padding: 10px;
   border: none;
   border-radius: 8px;
   font-size: 1rem;
-  cursor: pointer;
-  transition: background 0.2s;
 }
+
+.span-style {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.tiptool-text {
+  color: #6b6b6ba9;
+  user-select: none;
+  cursor: default;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+}
+
+.img-dim {}
 
 .image-viewer {
   flex: 1;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
-  background-color: transparent;
+  overflow: hidden;
 }
 
 .checkerboard-conic-background {
   --square-size: 20px;
-  max-width: 600;
-  max-height: 600;
+  max-width: 600px;
+  max-height: 600px;
   background: repeating-conic-gradient(from 0deg,
       #ccc 0deg 90deg,
       #333 90deg 180deg);
@@ -101,8 +115,7 @@ button:hover {
 
 .header-text {
   color: #7a7a7aa9;
-  user-select: none;
-  cursor: default;
   margin: 0;
   padding: 0;
+  user-select: none;
 }
