--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -22,27 +22,25 @@ body {
 .container {
   width: 100vw;
   height: 100vh;
-  padding: 20px;
+  padding: 15px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   border: thick double #2e7555;
 }
 
+.editor {
+  flex: 1 0 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+}
+
 .tooltip-bar {
-  flex: 0 0 10%;
+  flex: 0 0 5%;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.editor {
-  flex: 1 0 90%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  gap: 1rem;
-  overflow: auto;
 }
 
 .button-panel {
@@ -56,14 +54,14 @@ body {
   align-items: flex-start;
 }
 
-button {
+.file-buttons,
+.flip-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   padding: 12px;
   gap: 6px;
-  background-color: #305e49;
   border: none;
   color: white;
   border-radius: 8px;
@@ -72,9 +70,22 @@ button {
   transition: background 0.2s;
 }
 
-button:hover {
+.file-buttons {
+  background-color: #305e49;
+}
+
+.flip-buttons {
+  background-color: #305e5b;
+}
+
+.file-buttons:hover {
   background-color: #316f63;
 }
+
+.flip-buttons:hover {
+  background-color: #3d7773;
+}
+
 
 .input-styles {
   width: 100%;
@@ -103,10 +114,10 @@ button:hover {
 .image-viewer {
   position: relative;
   flex: none;
-  width: 85%;
+  width: 98%;
+  height: 94%;
   border: thick solid #305e49;
   border-radius: 12px;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -165,4 +176,38 @@ button:hover {
 .flip-v {
   -webkit-transform: scaleY(-1);
   transform: scaleY(-1);
+}
+
+.social-buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-bottom: -2px;
+}
+
+.social-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 10px;
+  width: 100%;
+  background-color: #30545e;
+  border-radius: 8px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 0.95rem;
+  transition: background 0.2s ease, transform 0.1s ease;
+  user-select: none;
+}
+
+.social-btn:hover {
+  background-color: #3c6773;
+  color: #d3d3d3;
+  transform: translateY(-1px);
+}
+
+.social-btn:active {
+  transform: translateY(0px);
 }
