--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -96,6 +96,15 @@ body {
   font-size: 1rem;
 }
 
+.input-styles-modal {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  background-color: #111;
+}
+
 .span-style {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -141,8 +150,15 @@ body {
     linear-gradient(90deg, #292a30 .1em, transparent .1em);
 } */
 
-#box {
-  background-color: #e41a1a68;
+.box {
+  background-color: #d91a1a68;
+  border-radius: 1px;
+  position: absolute;
+  cursor: pointer;
+}
+
+.highlighted-box {
+  background-color: #ff1b1b8d;
   border-radius: 1px;
   position: absolute;
   cursor: pointer;
@@ -234,10 +250,6 @@ body {
   background-size: 100% 100%;
 }
 
-
-
-
-
 .hitbox-modal {
   padding: 10px;
   gap: 5px;
@@ -247,10 +259,10 @@ body {
   flex-direction: column;
   background-color: #304f5e;
   position: absolute;
-  top: 50%;
+  top: 30%;
   right: 50%;
-  height: 30%;
-  width: 25%;
+  height: 36%;
+  width: 20%;
   z-index: 20;
 }
 
