--- a/src/ui/css/App.css
+++ b/src/ui/css/App.css
@@ -105,6 +105,7 @@ body {
   font-size: 1rem;
   background-color: #111;
   text-align: center;
+  contain: layout style;
 }
 
 .span-style {
@@ -151,20 +152,6 @@ body {
   background-image: linear-gradient(#292a30 .1em, transparent .1em),
     linear-gradient(90deg, #292a30 .1em, transparent .1em);
 } */
-
-.box {
-  background-color: #d91a1a68;
-  border-radius: 1px;
-  position: absolute;
-  cursor: pointer;
-}
-
-.highlighted-box {
-  background-color: #ff1b1b8d;
-  border-radius: 1px;
-  position: absolute;
-  cursor: pointer;
-}
 
 .checkerboard-conic-background {
   background: repeating-conic-gradient(from 0deg,
