--- a/src/ui/css/HitboxEditor.css
+++ b/src/ui/css/HitboxEditor.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     background-color: #304f5e;
     position: absolute;
+    top: 0px;
+    left: 0px;
     height: 40%;
     width: 20%;
     z-index: 20;
