--- a/src/ui/css/HitboxEditor.css
+++ b/src/ui/css/HitboxEditor.css
@@ -37,6 +37,8 @@
     border-radius: 1px;
     position: absolute;
     cursor: pointer;
+    transform: scale(1);
+    transform: all 0.1s ease-in-out;
 }
 
 .box {
@@ -78,4 +80,38 @@
 .refresh {
     margin-left: 10px;
     cursor: pointer;
+}
+
+@keyframes scale-out-fade {
+    from {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes scale-out-fade {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    to {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+}
+
+.entering {
+    animation: scale-in-fade 0.2s ease-in forwards;
+    pointer-events: none;
+}
+
+.exiting {
+    animation: scale-out-fade 0.2s ease-out forwards;
+    pointer-events: none;
 }
