--- a/src/ui/css/HitboxEditor.css
+++ b/src/ui/css/HitboxEditor.css
@@ -115,3 +115,29 @@
     animation: scale-out-fade 0.2s ease-out forwards;
     pointer-events: none;
 }
+
+@keyframes spin-right {
+    from {
+        transform: rotate(0);
+    }
+
+    to {
+        transform: rotate(-180);
+    }
+}
+
+@keyframes spin-left {
+    from {
+        transform: rotate(-180)
+    }
+
+    to {
+        transform: rotate(0)
+    }
+}
+
+.setting {
+    cursor: pointer;
+    margin: 10px 0px 10px 0px;
+
+}
